--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           <div class="col-9">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li><a href="#about-section" class="nav-link">About</a></li>
-                <li><a href="#services-section" class="nav-link">Services</a></li>
-                <li><a href="#products-section" class="nav-link">Products</a></li>
+                <li><a href="index.html#home-section" class="nav-link">Home</a></li>
+                <li><a href="index.html#about-section" class="nav-link">About</a></li>
+                <li><a href="index.html#services-section" class="nav-link">Services</a></li>
+                <li><a href="index.html#products-section" class="nav-link">Products</a></li>
                 <li><a href="team.html" class="nav-link">Team</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
 
               </ul>
             </nav>
