--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   <input type="text" class="form-control" placeholder="First name">
                 </div>
                 <div class="form-group col-6">
-                  <input type="text" class="form-control" placeholder="Full name">
+                  <input type="text" class="form-control" placeholder="Last name">
                 </div>
               </div>
 
